# guile-deck

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
.github/workflows/: guile2.2.yml
build-aux/am/: Makefile.am  guile.am
build-aux/m4/: Makefile.am
doc/: .gitignore  Makefile.am  api-core-session.texi  api-core-types.texi  api-core.texi  api-matrix-client.texi  api-matrix.texi  guile-deck.texi
examples/: .gitignore  Makefile.am  hello-bot.scm  hello-bot.scm.in  send-message.scm  send-message.scm.in
modules/deck/: Makefile.am  matrix-client.scm  matrix.scm
modules/deck/core/: Makefile.am  error.scm  mac.scm  room.scm  session.scm
modules/deck/core/common/: Makefile.am  error.scm  list.scm
modules/deck/core/net/: Makefile.am  client.scm  http-client.scm
modules/deck/core/types/: Makefile.am  device.scm  filter.scm  matrix-content-uri.scm  matrix-event.scm  matrix-id.scm  presence.scm  state.scm  third-party-identifier.scm  turn-server.scm
tests/: Makefile.am  client.scm  common.scm  device.scm  filter.scm  http-client.scm  mac.scm  matrix-content-uri.scm  matrix-event.scm  matrix-id.scm  state.scm  third-party-identifier.scm
